# course_work3

./: README.md  main.py  pyproject.toml
tests/: test_func.py  test_widget_data.py
utils/: func.py  widget_data.py
