[tool.poetry]
name = "course-work3"
version = "0.1.0"
description = "Creating a new feature for a bank widget"
authors = ["Dmitriy Bychkov <582620@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work3"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
